[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/ShadowHead.glb" type="PackedScene" id=1]
[ext_resource path="res://Assets/ShadowBody.glb" type="PackedScene" id=2]
[ext_resource path="res://Actors/Shadow/Shadow.gd" type="Script" id=3]
[ext_resource path="res://Resources/PlayerEvents.tres" type="Resource" id=4]
[ext_resource path="res://Actors/PortalHole/PortalHole.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/audio/sfx/monster1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Systems/SoundRandomizer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Sfx/ShadowDeath.tres" type="Resource" id=8]
[ext_resource path="res://Resources/Sfx/ShadowIdle.tres" type="Resource" id=9]
[ext_resource path="res://Assets/audio/sfx/hit.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=3]
resource_name = "Despawn"
length = 1.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("PortalHole:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.15, 0.0222921, 2, -0.25, 0, 0.15, 0.0222921, 0, -0.1, 0.0515641, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.6, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PortalHole:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.15, -0.00915563, 2, -0.25, 0, 0.15, -0.00915563, 0, -0.1, 0.0410814, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.6, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PortalHole:scale:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.15, -0.0720512, 2, -0.25, 0, 0.15, -0.0720512, 0, -0.1, 0.0305989, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.6, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Body:translation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.35, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Body:translation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -3.31673, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.35, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Body:translation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.35, 1 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("PortalHole:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.05, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ false, true, true, false ]
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("OmniLight:light_energy")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "despawn_complete"
} ]
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Body/ShadowHeadPivot/ShadowHead:rotation_degrees:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -73.48, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Body/ShadowHeadPivot/ShadowHead:rotation_degrees:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( -180, -0.25, 0, 0.25, 0, -180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Body/ShadowHeadPivot/ShadowHead:rotation_degrees:z")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2.91693e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15 )
}
tracks/12/type = "value"
tracks/12/path = NodePath("CPUParticles:emitting")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ false, true, true, false, false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PortalHole:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CylinderShape" id=1]
radius = 0.519944
height = 3.24403

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.645179, 0.434022, 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_use_point_size = true
vertex_color_use_as_albedo = true
params_point_size = 3.0
albedo_color = Color( 1, 0.0352941, 0.0352941, 1 )

[sub_resource type="PointMesh" id=5]
material = SubResource( 4 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.0104167, 0.475694, 1 )
colors = PoolColorArray( 1, 0.74958, 0.112051, 1, 0.763149, 0.148435, 0.585932, 1, 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
flags_use_point_size = true
vertex_color_use_as_albedo = true
params_point_size = 4.0

[sub_resource type="PointMesh" id=9]
material = SubResource( 8 )

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[node name="Shadow" type="KinematicBody" groups=["enemy"]]
script = ExtResource( 3 )
player_events = ExtResource( 4 )
speed = 2.0
hp = 3.0
light_color = Color( 1, 0, 0, 1 )
hit_light_color = Color( 1, 1, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Despawn = SubResource( 3 )
anims/RESET = SubResource( 6 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.85609, -0.374287 )
light_color = Color( 0.972549, 0.00784314, 0.00784314, 1 )

[node name="Body" type="Spatial" parent="."]

[node name="ShadowBody" parent="Body" instance=ExtResource( 2 )]

[node name="ShadowHeadPivot" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.566, 0.074922 )

[node name="ShadowHead" parent="Body/ShadowHeadPivot" instance=ExtResource( 1 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -3.72529e-08 )

[node name="TorsoCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0391571, 1.60221, 0.0954756 )
shape = SubResource( 1 )

[node name="BaseCollider" type="CollisionShape" parent="."]
transform = Transform( 0.999999, 0, -0.00120428, 0, 1, 0, 0.00120428, 0, 0.999999, 0, 0.465625, -0.151427 )
shape = SubResource( 2 )

[node name="PortalHole" parent="." instance=ExtResource( 5 )]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.01, 0 )
visible = false

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, -0.000157118, 1, 0, -1, -0.000157118, 0, 0.0037328, 0 )
emitting = false
amount = 60
local_coords = false
mesh = SubResource( 5 )
emission_shape = 5
emission_ring_radius = 1.4
emission_ring_inner_radius = 1.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
direction = Vector3( 0, 0, 1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.51
color_ramp = SubResource( 7 )

[node name="SpawnNoise" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.78918, 0 )
stream = ExtResource( 6 )
bus = "SFX"

[node name="HitNoise" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.78918, 0 )
stream = ExtResource( 10 )
attenuation_model = 3
unit_db = 2.0
unit_size = 20.0
bus = "SFX"

[node name="DeathSound" parent="." instance=ExtResource( 7 )]
sfx_set = ExtResource( 8 )

[node name="IdleSound" parent="." instance=ExtResource( 7 )]
sfx_set = ExtResource( 9 )

[node name="LightOn" type="Timer" parent="."]
one_shot = true

[node name="HitParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.95223, 0.110036 )
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
mesh = SubResource( 9 )
emission_shape = 2
emission_box_extents = Vector3( 0.2, 1, 0.2 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.09
color = Color( 1, 0, 0, 1 )
color_ramp = SubResource( 10 )

[connection signal="timeout" from="LightOn" to="." method="_on_LightOn_timeout"]
